--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Kush Garg\\Documents\\NetBeansProjects\\Kush\\dist\\lib\\mysql-connector-java-5.1.23-bin.jar
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Kush Garg\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
